--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -50,3 +50,11 @@
 	line-height: 21px;
 	color: var(--black);
 }
+.navbar__price{
+	font-family: 'Inika';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 21px;
+	color: var(--black);
+}
